# ndstructs

./: .bumpversion.cfg  .gitignore  .readthedocs.yaml  .travis.yml  LICENSE  pyproject.toml  pyrightconfig.json  pytest.ini  setup.py
.github/workflows/: deploy.yml  test.yml
conda-recipe/: meta.yaml
dev/: README.md  environment-dev.yaml
docs/: conf.py  index.rst
docs/source/: modules.rst  ndstructs.rst  ndstructs.utils.rst
ndstructs/: __init__.py  array5D.py  point5D.py
ndstructs/caching/: LockingCache.py
ndstructs/datasink/: DataSink.py  N5DataSink.py  PrecomputedChunksDataSink.py  __init__.py  n5_dataset_sink.py  precomputed_chunks_sink.py
ndstructs/datasource/: ArrayDataSource.py  BackedSlice5D.py  DataRoi.py  DataSource.py  DataSourceSlice.py  DataSourceUrl.py  N5DataSource.py  PilDataSource.py  PrecomputedChunksDataSource.py  RelabelingDataSource.py  SequenceDataSource.py  UnsupportedUrlException.py  __init__.py  n5_attributes.py  precomputed_chunks_info.py
ndstructs/utils/: JsonSerializable.py  __init__.py  json_serializable.py
tests/: test_array5D.py  test_data_source_url.py  test_datasink.py  test_datasource.py  test_point5D.py  test_shape5D.py  test_slice5D.py
