[project]
name = "ndstructs"
dynamic = ["version"]
authors = [{ name = "Tomaz Fogaca Vieira", email = "tom.fogaca@gmail.com" }]
description = "Utilities for dealing with 5D arrays"
requires-python = ">=3.7"
license = { text = "MIT" }
dependencies = [
  "numpy",
  "typing_extensions"
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120

[tool.setuptools.dynamic]
version = {attr = "ndstructs.__version__"}

[tool.setuptools]
packages = ["ndstructs", "ndstructs.utils", "ndstructs.caching"]
